[package]
name = "sqs"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
async-trait = "0.1"
aws-config = "0.54.1"
aws-sdk-sqs = "0.24.0"
aws-types = "0.54.1"
futures = "0.3"
serde = {version = "1.0", features = ["derive"] }
tracing = "0.1.37"
wasmbus-rpc = { version = "0.10.0", features = ["otel"] }
wasmcloud-interface-messaging = "0.7.0"

# test dependencies
[dev-dependencies]
wasmcloud-test-util = "0.5.0"

[[bin]]
name = "sqs"
path = "src/main.rs"
